packages/next-swc/crates/next-custom-transforms/tests/errors/server-actions/server-graph/8/output.js
/* __next_internal_action_entry_do_not_use__ {"6d53ce510b2e36499b8f56038817b9bad86cabb4":"$$ACTION_0"} */ import { createActionProxy } from "private-next-rsc-action-proxy";
import { encryptActionBoundArgs, decryptActionBoundArgs } from "private-next-rsc-action-encryption";
const foo = createActionProxy("6d53ce510b2e36499b8f56038817b9bad86cabb4", $$ACTION_0);
export async function $$ACTION_0() {
    'use strict';
}
const bar = async ()=>{
    const x = 1;
    // prettier-ignore
    'use server';
};
